Extract docs to README.mds